--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,8 @@
     <string name="drug_name">약품 명:Almagel</string>
     <string name="volume">용량</string>
     <string name="save">저장</string>
+    <string name="modifie">수정</string>
+    <string name="emptyMemo">저장된 메모가 없습니다.</string>
 
 
 </resources>
